fix: update instructions to use the official 5.19.0 release

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -6,6 +6,12 @@ keywords: ["webiny", "enterprise", "multi-tenancy"]
 description: Learn how to configure multi-tenancy in your Webiny project
 ---
 
+:::info Can I use this?
+
+This feature is available since Webiny **v5.19.0**.
+
+:::
+
 :::tip What you'll learn
 
 - how to enable multi-tenancy in the existing Webiny project
@@ -36,16 +42,13 @@ The following sections guide you through the process in a step-by-step manner.
 
 ## 1) Prepare the Project
 
-If you're upgrading your existing `5.18.x` project, we need to upgrade the `npm` packages to the experimental release, which contains the multi-tenancy functionality. To do that, execute the following command in your terminal:
+Your project needs to be at version `5.19.0` to use this feature.
+Please follow the [upgrade guide](/docs/how-to-guides/upgrade-webiny) to upgrade your project to the appropriate version.
+
+Alternatively, you can create a new `>=5.19.0` project, by running:
 
 ```shell
-yarn up "@webiny/*@0.0.0-mt-3"
-```
-
-Alternatively, you can create a new project using the experimental release, by running:
-
-```shell
-npx create-webiny-project@0.0.0-mt-3 my-project --tag=0.0.0-mt-3
+npx create-webiny-project my-project
 ```
 
 ## 2) Add New Dependencies
@@ -55,19 +58,19 @@ We need to add several new packages to the project.
 Add Tenant Manager module dependency to the GraphQL API dependencies:
 
 ```shell
-yarn workspace api-graphql add @webiny/api-tenant-manager@0.0.0-mt-3
+yarn workspace api-graphql add @webiny/api-tenant-manager
 ```
 
 Add Tenant Manager module dependency to the Admin app dependencies:
 
 ```shell
-yarn workspace admin add @webiny/app-tenant-manager@0.0.0-mt-3
+yarn workspace admin add @webiny/app-tenant-manager
 ```
 
 Add a package with custom AWS components for Pulumi to the root package.json:
 
 ```shell
-yarn add @webiny/pulumi-aws@0.0.0-mt-3
+yarn add @webiny/pulumi-aws
 ```
 
 ## 3) Import Tenant Manager
@@ -265,6 +268,7 @@ To find your CloudFront website domain, run `yarn webiny info --env=dev` and loo
 :::
 
 For your sub-tenants, domain configuration is located in the tenant form:
+
 <CenteredImage src={newTenantForm} title="Domain Settings For Sub-Tenants." />
 
 ## FAQ
@@ -283,7 +287,7 @@ This one is usually resolved by refreshing the Pulumi state of the `website` pro
 
 ```shell
  yarn webiny pulumi apps/website --env=dev -- refresh --yes
-````
+```
 
 > NOTE: there's a space between `--` and `refresh`.
 
@@ -292,6 +296,7 @@ After this, running the `deploy` command goes back to normal.
 ### Pulumi throws an error while deleting my Lambda@Edge function
 
 You're probably seeing the following error:
+
 <CenteredImage src={lambdaDelete} title="Error Deleting Lambda@Edge Function." />
 
 Lambda@Edge functions are replicated to all AWS Edge locations. This means that this particular function will not be deleted until AWS removes it from all the Edge locations. Even thought this error looks terrible, your deploy went just fine. Give it a couple of minutes, and re-deploy. You'll see that, after some time, your old Lambda@Edge function will be deleted successfully.
