--- a/docs/how-to-guides/deployment/connect-custom-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-custom-domain.mdx
@@ -84,7 +84,7 @@ class Delivery {
         defaultCacheBehavior: {...},
         priceClass: "PriceClass_100",
         restrictions: {...},
-        aliases: ["coolwebsite.com"]
+        aliases: ["coolwebsite.com"],
         viewerCertificate: {
             cloudfrontDefaultCertificate: true
         }
@@ -119,7 +119,7 @@ class Delivery {
         restrictions: {...},
         aliases: ["coolwebsite.com"]
         viewerCertificate: {
-            acmCertificateArn: "..." // Arn of the certificate
+            acmCertificateArn: "...", // Arn of the certificate
             sslSupportMethod: "sni-only"
         }
     });
