fix: update `webiny.config.ts` files

--- a/docs/how-to-guides/environment-variables.mdx
+++ b/docs/how-to-guides/environment-variables.mdx
@@ -182,7 +182,7 @@ Learn more about project applications and project organization in general, in th
 
 The following code shows the `webiny.config.ts` file of the `website` package, which is the one and only package of the **Website** project application:
 
-```js title="apps/website/code/webiny.config.ts" {11,15,26,30}
+```js title="apps/website/code/webiny.config.ts" {11,15,27,31}
 (...)
 
 module.exports = {
@@ -199,8 +199,9 @@ module.exports = {
             // assigning them into the "process.env" object.
             process.env.REACT_APP_MY_CUSTOM_ENV_VARIABLE = 'some-random-value';
 
-            // Start local development
-            await startApp(options, context);
+            // Starts local application development.
+            const watch = createWatchApp({ cwd: __dirname });
+            await watch(options);
         },
         async build(options, context) {
             invariant(options.env, NO_ENV_MESSAGE);
@@ -214,8 +215,10 @@ module.exports = {
             // assigning them into the "process.env" object.
             process.env.REACT_APP_MY_CUSTOM_ENV_VARIABLE = 'some-random-value';
 
-            // Bundle app for deployment
-            await buildApp(options, context);
+            // Creates a production build of your application, ready to be deployed to
+            // a hosting provider of your choice, for example Amazon S3.
+            const build = createBuildApp({ cwd: __dirname });
+            await build(options);
         }
     }
 };
