fix: replace `webiny.config.js` with `webiny.config.ts`

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -136,7 +136,7 @@ It's worth mentioning that the deployment commands shown above also build your a
 yarn webiny workspaces run build --folder {STACK_FOLDER}
 ```
 
-The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.js` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
+The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.ts` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
 
 ## Troubleshooting
 
