--- a/docs/how-to-guides/working-with-workspaces.mdx
+++ b/docs/how-to-guides/working-with-workspaces.mdx
@@ -99,8 +99,8 @@ Once executed, the `workspaces run` command first retrieves a list of all packag
 
 #### What happens if the command doesn't exist in one or more packages?
 
-If you're running a specific command for multiple packages, and some of the packages don't have it defined in its `webiny.config.js`, those packages will simply be ignored. Ultimately, for each package, the command gets executed only if it's actually defined in the `webiny.config.js`.
+If you're running a specific command for multiple packages, and some of the packages don't have it defined in its `webiny.config.ts`, those packages will simply be ignored. Ultimately, for each package, the command gets executed only if it's actually defined in the `webiny.config.ts`.
 
-#### Can I add more commands in the `webiny.config.js`?
+#### Can I add more commands in the `webiny.config.ts`?
 
 Yes, you can. Feel free to expand it in any way needed.
