--- a/docs/release-notes/5.5.0/changelog.mdx
+++ b/docs/release-notes/5.5.0/changelog.mdx
@@ -205,7 +205,7 @@ Learn more about project applications in the [Project Applications](/docs/key-to
 
 #### 4. API packages - Added `watch` Scripts and Commands
 
-Every package located within the `api` project application folder received a `watch` script in its `package.json` file and a `watch` command in its `webiny.config.js` file.
+Every package located within the `api` project application folder received a `watch` script in its `package.json` file and a `watch` command in its `webiny.config.ts` file.
 
 #### 5. Admin Area / Website - Added `watch` Scripts
 
@@ -230,8 +230,8 @@ The new `scripts` section should look like the following:
 (...)
 ```
 
-In order for these to work, the `@webiny/cli` and `@webiny/project-utils` were added as development dependencies within the `devDependencies` property. Finally, the `webiny.config.js` file was created, which defines the actual `build` and `watch` commands.
+In order for these to work, the `@webiny/cli` and `@webiny/project-utils` were added as development dependencies within the `devDependencies` property. Finally, the `webiny.config.ts` file was created, which defines the actual `build` and `watch` commands.
 
 :::info
-Check this [example package](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template) to see updated [`package.json`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/package.json) and [`webiny.config.js`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/webiny.config.js) files.
+Check this [example package](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template) to see updated [`package.json`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/package.json) and [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/watch/packages/cli-plugin-scaffold-graphql-service/template/webiny.config.ts) files.
 :::
