--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
@@ -180,7 +180,7 @@ Under the hood, essentially, the [`webiny deploy`](/docs/how-to-guides/deploymen
 1. compile application code and create a production build of our application
 2. based on the cloud infrastructure code, deploy our application and other defined resources
 
-This means that upon deploying our React application for the first time, the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L65) function call, that we've added within the [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) command in our [`webiny.config.js`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
+This means that upon deploying our React application for the first time, the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L65) function call, that we've added within the [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) command in our [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
 
 So, when doing the first deployment, we recommend you first deploy your cloud infrastructure resources only, and then proceed by doing another deployment, this time with the application code. We can achieve this with the following command:
 
