feat(release-notes): add pb events and changelog

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -23,3 +23,30 @@ description: See what's new in Webiny version 5.20.0.
 ### Updated All Mentions of `webiny.config.ts` Files ([#366](https://github.com/webiny/docs.webiny.com/pull/366))
 
 ✍️
+
+## Page Builder
+
+### Replaced Lifecycle Hooks With Publish And Subscribe Methods ([#2136](https://github.com/webiny/webiny-js/pull/2136))
+
+We removed PagePlugin hooks in favor of publish / subscribe methods. To find out which methods exist read the [article](/docs/key-topics/page-builder/lifecycle-events) about them.
+
+✍️
+
+## Headless CMS
+
+### Fixed Failing List Query When Querying a Model That Was Created via Plugin ([#2133](https://github.com/webiny/webiny-js/pull/2133))
+
+This bug occurred when user created a model via the CmsModelPlugin class, and there were no entries inserted. DynamoDB + Elasticsearch was only affected.
+
+### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
+
+### Fixed an Admin Area Bug Where Field in Nested Object Was Marked as Title Field If It Had Same `fieldId` as Models `titleFieldId` ([#2127](https://github.com/webiny/webiny-js/pull/2127))
+
+### Fixed an Admin Area Bug Where Date Field Value Was Set as Null If the Default Value Was Not Changed by the User ([#2126](https://github.com/webiny/webiny-js/pull/2126))
+
+### Fixed an API Bug Where Both `id` And `entryId` Search Returned Same Records In Listing ([#2125](https://github.com/webiny/webiny-js/pull/2125))
+
+### Fixed an API Bug Where Schema Was Breaking If First Field In Model Was An Empty Object Field ([#2120](https://github.com/webiny/webiny-js/pull/2120))
+
+✍️
+️
