--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -28,7 +28,11 @@ description: See what's new in Webiny version 5.20.0.
 
 ### Replaced Lifecycle Hooks With Publish And Subscribe Methods ([#2136](https://github.com/webiny/webiny-js/pull/2136))
 
-We removed PagePlugin hooks in favor of publish / subscribe methods. To find out which methods exist read the [article](/docs/key-topics/page-builder/lifecycle-events) about them.
+We removed `PagePlugin` hooks in favor of publish / subscribe methods. To find out which methods exist read the [article](/docs/key-topics/page-builder/lifecycle-events) about them.
+
+:::warning
+If you have used `PagePlugin` hooks, please switch to the subscribe methods, because hooks were completely removed.
+:::
 
 ✍️
 
