wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -8,15 +8,38 @@ description: See what's new in Webiny version 5.20.0.
 
 # Changes
 
+## Page Builder
+
+### Added Ability to Re-render an Existing Published Page ([#2092](https://github.com/webiny/webiny-js/pull/2092))
+
+From time to time, users may need to re-render a particular page they've previously created and published. This can now be done easily via the built-in [API Playground](/docs/how-to-guides/webiny-applications/admin-area/api-playground/), by executing a simple `rerenderPage` GraphQL mutation. For example:
+
+```graphql title='Re-rendering a Page via the "rerenderPage" Mutation'
+mutation {
+  pageBuilder {
+    rerenderPage(id: "xyz") {
+        data {
+            id
+            path
+        }
+    }
+  }
+}
+```
+
 ## Development
 
 ### Fixed `webiny watch` Command's `--remoteRuntimeLogs` (`-r`) Argument ([#2124](https://github.com/webiny/webiny-js/pull/2124))
 
-✍️
+In a couple of scenarios, upon running the [`webiny watch`](/docs/how-to-guides/use-watch-command/) command, adding the `--remoteRuntimeLogs` (`-r`) argument would not properly return runtime logs in user's terminal. This has now been addressed.
 
 ### Fixed React Component Scaffold's `webiny.config.ts` File ([#2123](https://github.com/webiny/webiny-js/pull/2123))
 
-✍️
+The [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-react-component/template/webiny.config.ts) file that is generated when running the React Component scaffold has been updated. It now reflects the changes done in the recent [5.18.0](/docs/release-notes/5.18.0/changelog) release.
+
+### Two New `webiny deploy` Hooks ([#2079](https://github.com/webiny/webiny-js/pull/2079))
+
+You can now hook onto the pre-build and post-build events that are emitted during the `webiny deploy` command. More information about all related hooks can be found in
 
 ## Documentation
 
