--- a/docs/how-to-guides/deployment/build-and-deploy-hooks.mdx
+++ b/docs/how-to-guides/deployment/build-and-deploy-hooks.mdx
@@ -1,35 +1,61 @@
 ---
 id: build-and-deploy-hooks
-title: Build & deploy hooks
-sidebar_label: Build & deploy hooks
+title: Build and Deploy Hooks
+sidebar_label: Build and Deploy Hooks
 keywords: ["project", "application", "CLI", "deploy", "build", "hooks"]
-description: Learn how to run custom hooks during build & deploy of your application.
+description: Learn how to hook onto key lifecycle events of the "webiny deploy" commands.
 ---
+
+import CenteredImage from "@components/CenteredImage";
+import cloudInfrastructureDiagram from "./assets/build-and-deploy-hooks/webiny_deploy_phases.png";
 
 :::info Can I Use This?
 
-- Build hooks are available since Webiny **v5.20.0**.
-- Deploy hooks are available since Webiny **v4.7.0**.
+Build-related hooks outlined in this guide are available since Webiny **v5.20.0**, while deploy-related ones are available already since Webiny **v5.0.0**.
 
 :::
 
 :::tip What you’ll learn
 
-- how to run custom code before and after build or deploy
+- how to run custom code before and after build and deploy steps
 
 :::
 
 ## Introduction
 
-Many times it's necessary to run some code before or after build or deployment.
-For example, you may want to add some additional logging or validation.
+Internally, the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project/) command consists of two steps:
 
-## Creating a hook
+1. **build** - within this step, your application code gets compiled and is made ready for deployment
+2. **deploy** - within this step, the compiled code, along with the defined cloud infrastructure resources gets deployed
 
-With the power of plugins, it's easy to run arbitrary code before and after
-the process of build & deployment.
+:::info
+To deploy necessary cloud infrastructure, by default, Webiny relies on Pulumi, a modern infrastructure as code framework. Find out more in the following [IaC with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
 
-It's as easy as defining a CLI plugin within your `webiny.project.ts`:
+In some cases, it might be necessary to run some code before or after build or deployment. For example, you may want to add some additional logging or validation.
+
+This is why the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project/) command enables hooking onto a couple of its key lifecycle events:
+
+1. pre-build
+2. post-build
+3. pre-deploy
+4. post-deploy
+
+The following diagram shows in which order these lifecycle events are triggered:
+
+<CenteredImage
+  shadow={false}
+  style={{maxWidth: 850 }}
+  alt="webiny deploy Command's Lifecycle Events"
+  src={cloudInfrastructureDiagram}
+/>
+
+
+We can hook onto any of these events via a dedicated plugin type, which we cover in the following section.
+
+## Creating a Hook
+
+The following code demonstrates all of the plugin types we can use in order to hook onto the command's key lifecycle events. We are defining them within the [`cli.plugins`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/webiny.project.ts#L23) section of the object exported from the root [`webiny.project.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/webiny.project.ts) file.
 
 ```ts title="webiny.project.ts"
 // Some of the code is removed for brevity.
@@ -43,31 +69,39 @@ export default {
         type: "hook-before-build",
         name: "my-custom-hook-before-build",
         async hook(args, context) {
-          // your code goes here
+          // Gets executed before the build (application code compilation) step.
         }
       },
       {
         type: "hook-after-build",
         name: "my-custom-hook-after-build",
         async hook(args, context) {
-          // your code goes here
+          // Gets executed after the build (application code compilation) step.
         }
       },
       {
         type: "hook-before-deploy",
         name: "my-custom-hook-before-deploy",
         async hook(args, context) {
-          // your code goes here
+          // Gets executed before the deployment of the compiled code
+          // and other necessary cloud infrastructure resources.
         }
       },
       {
         type: "hook-after-deploy",
         name: "my-custom-hook-after-deploy",
         async hook(args, context) {
-          // your code goes here
+          // Gets executed after the deployment of the compiled code
+          // and other necessary cloud infrastructure resources.
         }
       }
     ]
   }
 };
 ```
+
+## FAQ
+
+#### Can I define my plugin in a separate file and simply import it in the `webiny.project.ts` file?
+
+Yes, you can and that's probably the best way to do it because the `webiny.project.ts` file will be easier to read.
