feat(release-notes): update cms descriptions

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -10,21 +10,29 @@ description: See what's new in Webiny version 5.20.0.
 
 ## Headless CMS
 
-##### Fixed Failing List Query ([#2133](https://github.com/webiny/webiny-js/pull/2133))
+### Fixed Failing List Query ([#2133](https://github.com/webiny/webiny-js/pull/2133))
 
 This bug occurred when user created a model via the CmsModelPlugin class, and there were no entries inserted. DynamoDB + Elasticsearch was only affected.
 
-##### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
+### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
 
-##### Fixed Marking a Nested Object's Field as Title Field ([#2127](https://github.com/webiny/webiny-js/pull/2127))
+User has the ability to clone existing model into same or another locale.
 
-##### Fixed an Admin Area Bug Where Date Field Value Was Set as Null ([#2126](https://github.com/webiny/webiny-js/pull/2126))
+### Fixed Marking a Nested Object's Field as Title Field ([#2127](https://github.com/webiny/webiny-js/pull/2127))
 
-##### Fixed an API Search Bug ([#2125](https://github.com/webiny/webiny-js/pull/2125))
+Bug manifested only in the Admin Area when the nested object field had the same `fieldId` as model `titleFieldId`.
 
-##### Fixed an API Bug Where Schema Was Breaking ([#2120](https://github.com/webiny/webiny-js/pull/2120))
+### Fixed an Admin Area Bug Where Date Field Value Was Set as Null ([#2126](https://github.com/webiny/webiny-js/pull/2126))
 
-✍️
+Bug manifested when user was creating new entry with any of the `date` type fields and did not change the default value in the Admin Area.
+
+### Fixed an API Search Bug ([#2125](https://github.com/webiny/webiny-js/pull/2125))
+
+Bug manifested when user was searching for entry with either `id` or `entryId` parameter.
+
+### Fixed an API Bug Where Schema Was Breaking ([#2120](https://github.com/webiny/webiny-js/pull/2120))
+
+Bug manifested when user added an empty nested object field as first field in the model.
 
 ## Page Builder
 
@@ -45,7 +53,7 @@ mutation {
 }
 ```
 
-##### Replaced Lifecycle Hooks With Publish And Subscribe Methods ([#2136](https://github.com/webiny/webiny-js/pull/2136))
+### Replaced Lifecycle Hooks With Publish And Subscribe Methods ([#2136](https://github.com/webiny/webiny-js/pull/2136))
 
 We removed `PagePlugin` hooks in favor of publish / subscribe methods. To find out which methods exist read the [article](/docs/key-topics/page-builder/lifecycle-events) about them.
 
