wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -10,9 +10,13 @@ description: See what's new in Webiny version 5.20.0.
 
 ## Headless CMS
 
-##### Fixed Failing List Query ([#2133](https://github.com/webiny/webiny-js/pull/2133))
+##### Programmatically Created Content Models - Fixed "List-Entries" GraphQL Query  ([#2133](https://github.com/webiny/webiny-js/pull/2133))
 
-This bug occurred when user created a model via the CmsModelPlugin class, and there were no entries inserted. DynamoDB + Elasticsearch was only affected.
+We've resolved an issue that would occur when a user created a content model programmatically (via the [`CmsModelPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/CmsModelPlugin.ts#L9) plugin), and then tried to issue its respective GraphQL query that lists all entries. This issue was occurring only on the DynamoDB + Elasticsearch setup of Webiny.
+
+:::info
+To learn more about creating content models via plugins, check out the [Define Content Models via Plugins](/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins/) guide.
+:::
 
 ##### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
 
@@ -24,7 +28,6 @@ This bug occurred when user created a model via the CmsModelPlugin class, and th
 
 ##### Fixed an API Bug Where Schema Was Breaking ([#2120](https://github.com/webiny/webiny-js/pull/2120))
 
-✍️
 
 ## Page Builder
 
@@ -53,7 +56,6 @@ We removed `PagePlugin` hooks in favor of publish / subscribe methods. To find o
 If you have used `PagePlugin` hooks, please switch to the subscribe methods, because hooks were completely removed.
 :::
 
-✍️
 
 ## Development
 
