wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -10,17 +10,17 @@ description: See what's new in Webiny version 5.20.0.
 
 ## Headless CMS
 
-##### Programmatically Created Content Models - Fixed "List-Entries" GraphQL Query  ([#2133](https://github.com/webiny/webiny-js/pull/2133))
+### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
+
+User has the ability to clone existing model into same or another locale.
+
+### Programmatically Created Content Models - Fixed "List-Entries" GraphQL Query  ([#2133](https://github.com/webiny/webiny-js/pull/2133))
 
 We've resolved an issue that would occur when a user created a content model programmatically (via the [`CmsModelPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/CmsModelPlugin.ts#L9) plugin), and then tried to issue its respective GraphQL query that lists all entries. This issue was occurring only on the DynamoDB + Elasticsearch setup of Webiny.
 
 :::info
 To learn more about creating content models via plugins, check out the [Define Content Models via Plugins](/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins/) guide.
 :::
-
-### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
-
-User has the ability to clone existing model into same or another locale.
 
 ### Fixed Marking a Nested Object's Field as Title Field ([#2127](https://github.com/webiny/webiny-js/pull/2127))
 
