wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -61,7 +61,7 @@ mutation {
 
 We removed `PagePlugin` hooks in favor of publish / subscribe methods. To find out which methods exist read the [article](/docs/key-topics/page-builder/lifecycle-events) about them.
 
-:::warning
+:::danger
 If you have used `PagePlugin` hooks, please switch to the subscribe methods, because hooks were completely removed.
 :::
 
