wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -78,10 +78,10 @@ The [`webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/packages/
 
 ### Two New `webiny deploy` Hooks ([#2079](https://github.com/webiny/webiny-js/pull/2079))
 
-You can now hook onto the pre-build and post-build events that are emitted during the `webiny deploy` command. More information about all related hooks can be found in
+You can now hook onto the pre-build and post-build events that are emitted during the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project/) command. More information about all related hooks can be found in the new [Build and Deploy Hooks](/docs/how-to-guides/deployment/build-and-deploy-hooks) guide.
 
 ## Documentation
 
 ### Updated All Mentions of `webiny.config.ts` Files ([#366](https://github.com/webiny/docs.webiny.com/pull/366))
 
-✍️
+All occurrences of `webiny.config.ts` configuration files have been updated to reflect the changes done in the recent [5.18.0](/docs/release-notes/5.18.0/changelog) release.
