feat(release-notes): events explanation s

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -21,8 +21,11 @@ Lifecycle events using publish/subscribe pattern replace the PagePlugin hooks st
 ## Overview
 
 In our Page Builder we provide lifecycle events available for you to hook into.
+Lifecycle events are triggered before (`onBefore` keyword) and after (`onAfter` keyword) the data is stored into the database.
 
-With the lifecycle events you can hook into a number of different operations, like:
+With `onBefore` events you can change the data that is being stored into the database, so be careful with that.
+
+With the lifecycle events you can hook into a number of different operations, for example:
  * change the page data which is going to be stored
  * notify another system that new page was stored
 
