wip: create release notes

--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -6,13 +6,23 @@ keywords: ["webiny", "version", "5.20.0", "changelog"]
 description: See what's new in Webiny version 5.20.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import cloneModels from "./images/clone-models.gif";
+
 # Changes
 
 ## Headless CMS
 
-### Clone CMS Model ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
+### Introducing the Ability to Clone Existing Content Models ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
 
-User has the ability to clone existing model into same or another locale.
+With this new feature, users now have the ability to clone existing content models into the same or a different locale. No more manual re-creation of the same content model in a different locale!
+
+<CenteredImage
+  src={cloneModels}
+  title={"Cloning of Existing Content Models"}
+/>
+
+
 
 ### Programmatically Created Content Models - Fixed "List-Entries" GraphQL Query  ([#2133](https://github.com/webiny/webiny-js/pull/2133))
 
