--- a/docs/release-notes/5.20.0/changelog.mdx
+++ b/docs/release-notes/5.20.0/changelog.mdx
@@ -15,7 +15,7 @@ import cloneModels from "./images/clone-models.gif";
 
 ### Introducing the Ability to Clone Existing Content Models ([#2131](https://github.com/webiny/webiny-js/pull/2131)) ([#2132](https://github.com/webiny/webiny-js/pull/2132))
 
-With this new feature, users now have the ability to clone existing content models into the same or a different locale. No more manual re-creation of the same content model in a different locale!
+With this new feature, users now have the ability to clone existing content models into the same or even a different locale. Manual re-creation of the same content model in a different locale is now a thing of the past!
 
 <CenteredImage src={cloneModels} title={"Cloning of Existing Content Models"} />
 
@@ -29,19 +29,19 @@ To learn more about creating content models via plugins, check out the [Define C
 
 ### Fixed Marking a Nested Object's Field as Title Field ([#2127](https://github.com/webiny/webiny-js/pull/2127))
 
-Bug manifested only in the Admin Area when the nested object field had the same `fieldId` as model `titleFieldId`.
+While defining a content model via the Content Model Editor, if a nested object's field ended up with the same `fieldId` property as the content model's `titleFieldId` property, an unexpected error would be thrown. This particular edge case has now been addressed.
 
 ### Fixed an Admin Area Bug Where Date Field Value Was Set as Null ([#2126](https://github.com/webiny/webiny-js/pull/2126))
 
-Bug manifested when user was creating new entry with any of the `date` type fields and did not change the default value in the Admin Area.
+Prior to this release, saving a new content model entry that includes one or more date fields whose values haven't been changed (default values were used) would result in an unexpected error. This has now been addressed.
 
-### Fixed an API Search Bug ([#2125](https://github.com/webiny/webiny-js/pull/2125))
+### Headless CMS GraphQL API - Resolved Search Issue ([#2125](https://github.com/webiny/webiny-js/pull/2125))
 
-Bug manifested when user was searching for entry with either `id` or `entryId` parameter.
+In some cases, when using the Headless CMS GraphQL API to search for a content model entry via its `id` or `entryId` field would result in an unexpected error. The issues has been resolved.
 
-### Fixed an API Bug Where Schema Was Breaking ([#2120](https://github.com/webiny/webiny-js/pull/2120))
+### Headless CMS GraphQL API - Broken GraphQL Schema ([#2120](https://github.com/webiny/webiny-js/pull/2120))
 
-Bug manifested when user added an empty nested object field as first field in the model.
+Prior to this release, defining an empty nested object field as the initial field of a content model would break the Headless CMS' GraphQL schema, effectively making the GraphQL API unusable. A set of additional checks has been implemented, so this issue should now be resolved.
 
 ## Page Builder
 
@@ -62,9 +62,11 @@ mutation {
 }
 ```
 
+More information about this GraphQL mutation can also be found in the **Docs** tab, in the API Playground in your Admin Area application.
+
 ### Replaced Lifecycle Hooks With Publish And Subscribe Methods ([#2136](https://github.com/webiny/webiny-js/pull/2136))
 
-In order to provide a more unified developer experience, within your GraphQL API, hooking onto Page Builder’s key lifecycle events is now done via a simple [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/handler/src/plugins/ContextPlugin.ts). No need to import a separate plugin to achieve this.
+In order to provide a more unified developer experience, within your GraphQL API, hooking onto Page Builder’s key lifecycle events is now done via a simple [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/handler/src/plugins/ContextPlugin.ts). No need to import the separate `PagePlugin` plugin to achieve this anymore.
 
 The following is a simple example that shows how you can hook onto the `onBeforeMenuUpdate` lifecycle event:
 
@@ -81,7 +83,7 @@ new ContextPlugin<Context>(context => {
 For more details on all of the available events, please see the dedicated [Lifecycle Events](/docs/key-topics/page-builder/lifecycle-events) guide.
 
 :::danger
-The old `PagePlugin` plugins no longer work. If you've already used them in your project, please replace them with the new `PageBuilder` plugin.
+The `PagePlugin` plugin that was previously used is no longer supported. If you've already used it your project, please replace all occurrences with the new [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/handler/src/plugins/ContextPlugin.ts) approach, as demonstrated above.
 :::
 
 ## Development
