docs: added the missing comma

--- a/docs/how-to-guides/deployment/connect-custom-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-custom-domain.mdx
@@ -117,7 +117,7 @@ class Delivery {
         defaultCacheBehavior: {...},
         priceClass: "PriceClass_100",
         restrictions: {...},
-        aliases: ["coolwebsite.com"]
+        aliases: ["coolwebsite.com"],
         viewerCertificate: {
             acmCertificateArn: "...", // Arn of the certificate
             sslSupportMethod: "sni-only"
